--- a/composer.json
+++ b/composer.json
@@ -6,17 +6,20 @@
     "type": "project",
     "require": {
         "php": ">=5.6.4",
-        "laravel/framework": "^6.0",
+        "laravel/framework": "^7.0",
         "fideloper/proxy": "^4.0",
         "predis/predis": "^1.1",
         "laracademy/interactive-make": "^1.0",
-        "laravel/tinker": "^1.0",
-        "laravel/helpers": "^1.4"
+        "laravel/tinker": "^2.0",
+        "laravel/helpers": "^1.4",
+        "nunomaduro/collision": "^4.1",
+        "facade/ignition": "^2.0",
+        "laravel/ui": "^2.0"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
         "mockery/mockery": "0.9.*",
-        "phpunit/phpunit": "~7.0",
+        "phpunit/phpunit": "^8.5",
         "filp/whoops": "~2.0",
         "symfony/css-selector": "3.1.*",
         "symfony/dom-crawler": "3.1.*"        
