--- a/composer.json
+++ b/composer.json
@@ -6,30 +6,31 @@
     "type": "project",
     "require": {
         "php": ">=5.6.4",
-        "laravel/framework": "^7.0",
+        "laravel/framework": "^8.0",
         "fideloper/proxy": "^4.0",
         "predis/predis": "^1.1",
         "laracademy/interactive-make": "^1.0",
         "laravel/tinker": "^2.0",
         "laravel/helpers": "^1.4",
-        "nunomaduro/collision": "^4.1",
-        "facade/ignition": "^2.0",
-        "laravel/ui": "^2.0"
+        "nunomaduro/collision": "^5.0",
+        "facade/ignition": "^2.3.6",
+        "laravel/ui": "^3.0",
+        "guzzlehttp/guzzle": "^7.0.1",
+        "laravel/legacy-factories": "^1.1"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
         "mockery/mockery": "0.9.*",
-        "phpunit/phpunit": "^8.5",
+        "phpunit/phpunit": "^9.0",
         "filp/whoops": "~2.0",
         "symfony/css-selector": "3.1.*",
         "symfony/dom-crawler": "3.1.*"        
     },
     "autoload": {
-        "classmap": [
-            "database"
-        ],
         "psr-4": {
-            "App\\": "app/"
+            "App\\": "app/",
+            "Database\\Factories\\": "database/factories/",
+            "Database\\Seeders\\": "database/seeders/"
         }
     },
     "autoload-dev": {
