Ready to send emails with Resend

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-APP_NAME="Canada’s sale taxes API"
+APP_NAME="Canada sales tax API "
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
@@ -48,13 +48,9 @@ REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
-MAIL_MAILER=log
-MAIL_SCHEME=null
-MAIL_HOST=127.0.0.1
-MAIL_PORT=2525
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_FROM_ADDRESS="hello@example.com"
+MAIL_MAILER=resend
+RESEND_KEY=
+MAIL_FROM_ADDRESS=""
 MAIL_FROM_NAME="${APP_NAME}"
 
 AWS_ACCESS_KEY_ID=
