--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
         "laravel/jetstream": "^5.3",
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.9",
-        "livewire/livewire": "^3.0"
+        "livewire/livewire": "^3.0",
+        "resend/resend-php": "^0.15.1"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
