--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.9",
         "livewire/livewire": "^3.0",
+        "predis/predis": "^2.0",
         "resend/resend-php": "^0.15.1"
     },
     "require-dev": {
