Randomize HTTP 402 return
Let's try to get people's attention in the old endpoints.

--- a/.env.example
+++ b/.env.example
@@ -12,6 +12,9 @@ APP_FAKER_LOCALE=en_US
 API_RATE_PER_MINUTES_AUTHED=60
 API_RATE_PER_MINUTES_GUEST=15
 
+DEPRECATION_RATE_V1=10
+DEPRECATION_RATE_V2=5
+
 APP_MAINTENANCE_DRIVER=file
 # APP_MAINTENANCE_STORE=database
 
